--- a/src/components/Dashboard/DashboardTile/DashboardTile.scss
+++ b/src/components/Dashboard/DashboardTile/DashboardTile.scss
@@ -89,6 +89,7 @@
 
   .dashboard-tile-toolbars-right-container,
   .dashboard-tile-toolbars-left-container {
+    display: flex;
     pointer-events: auto;
   }
 
