--- a/src/components/Notifications/ScheduleBuilderV2/ScheduleBuilderV2.scss
+++ b/src/components/Notifications/ScheduleBuilderV2/ScheduleBuilderV2.scss
@@ -1,4 +1,9 @@
 .notification-frequency-step {
+  .schedule-builder-query-text {
+    font-style: italic;
+    color: var(--react-autoql-accent-color);
+  }
+
   .schedule-builder-at-connector {
     padding-bottom: 8px;
     padding-right: 8px;
