--- a/src/index.scss
+++ b/src/index.scss
@@ -20,9 +20,16 @@
 }
 
 .react-autoql-input-label {
-  margin: 0;
+  display: flex;
+  align-items: center;
   padding-bottom: 3px;
+  margin: 0;
   font-size: 0.875em;
   color: var(--react-autoql-text-color-primary);
   opacity: 0.8;
+
+  .react-autoql-icon {
+    margin: 0 3px;
+    opacity: 0.6;
+  }
 }
