--- a/src/components/Notifications/DataAlertModalV2/DataAlertModalV2.scss
+++ b/src/components/Notifications/DataAlertModalV2/DataAlertModalV2.scss
@@ -15,8 +15,9 @@
     font-size: 15px;
     padding-top: 15px;
 
-    &.compose-message {
+    .compose-message-section {
       display: flex;
+      margin-top: 20px;
 
       .form-section,
       .preview-section {
