--- a/src/components/Notifications/NotificationItem/NotificationItem.scss
+++ b/src/components/Notifications/NotificationItem/NotificationItem.scss
@@ -80,12 +80,51 @@
     display: flex;
     flex-direction: column;
     justify-content: stretch;
-    transition: height 0.2s ease;
-    height: 0;
-    opacity: 0;
-    &.visible {
-      height: 400px;
-      opacity: 1;
+    flex-wrap: nowrap;
+    flex: 0 1 auto;
+    transition: max-height 0.3s ease, opacity 0.3s ease;
+    opacity: 1;
+    min-height: 0px;
+    max-height: 0px;
+    overflow: hidden;
+
+    &.loading {
+      .react-autoql-notification-details-container,
+      .react-autoql-notification-extra-content {
+        opacity: 0;
+      }
+    }
+
+    &.expanded {
+      position: relative;
+      min-height: 70px;
+      max-height: 500px;
+
+      .react-autoql-notification-query-data-container {
+        flex: 1;
+        visibility: visible;
+        position: relative;
+        opacity: 1;
+
+        .react-autoql-response-content-container {
+          max-height: 300px !important;
+          // height: 300px !important;
+        }
+
+        // &.loading {
+        //   visibility: hidden;
+        //   position: absolute;
+        //   pointer-events: none;
+        //   opacity: 0;
+        // }
+      }
+    }
+
+    &.collapsed {
+      visibility: hidden;
+      // position: absolute;
+      pointer-events: none;
+      opacity: 0;
     }
   }
 
@@ -132,12 +171,9 @@
     padding-bottom: 7px;
   }
   .react-autoql-notification-details-container {
-    flex: 1;
     display: flex;
-    flex-direction: row;
-    align-items: stretch;
-    justify-content: stretch;
     overflow: hidden;
+    width: 100%;
 
     .react-autoql-notification-details {
       flex: 1 1;
