--- a/src/components/Notifications/ScheduleBuilder/ScheduleBuilder.scss
+++ b/src/components/Notifications/ScheduleBuilder/ScheduleBuilder.scss
@@ -1,41 +1,78 @@
-// .react-autoql-step-container {
-//   a {
-//     color: var(--react-autoql-accent-color, #26a7df);
-//   }
-// }
+.data-alert-schedule-builder-step {
+  .data-alert-condition-statement {
+    font-style: italic;
+  }
 
-// .frequency-date-select-container {
-//   margin-top: 10px;
-// }
+  .schedule-builder-at-connector {
+    padding-bottom: 8px;
+  }
 
-// .notification-frequency-step {
-//   display: flex;
+  .frequency-category-select {
+    position: relative;
+    padding-top: 9px;
+  }
 
-//   .frequency-category-select {
-//     position: relative;
-//     padding-top: 9px;
-//   }
+  .notification-frequency-select {
+    margin-left: 8px;
+  }
+  .frequency-repeat-checkbox .react-autoql-checkbox-label {
+    line-height: 33px;
+  }
+  .frequency-repeat-follow-text {
+    line-height: 32px;
+    vertical-align: top;
+  }
 
-//   .notification-frequency-select {
-//     margin-left: 8px;
-//   }
-//   .frequency-repeat-checkbox .react-autoql-checkbox-label {
-//     line-height: 33px;
-//   }
-//   .frequency-repeat-follow-text {
-//     line-height: 32px;
-//     vertical-align: top;
-//   }
-//   .frequency-settings-container {
-//     flex: 0 1 400px;
-//   }
-// }
+  .frequency-type-container {
+    margin-bottom: 20px;
 
-// .schedule-builder-timezone-section {
-//   margin: 10px 5px;
+    .react-autoql-select {
+      padding-left: 6px;
+    }
+  }
+  .frequency-settings-container {
+    font-size: inherit;
 
-//   .react-autoql-timezone-select {
-//     display: inline-block;
-//     width: 300px;
-//   }
-// }
+    &.continuous-alert .react-autoql-data-alert-frequency-option {
+      margin-bottom: 20px;
+      margin-right: 20px;
+    }
+
+    .react-autoql-select {
+      width: 100%;
+      min-width: fit-content;
+    }
+
+    .react-autoql-data-alert-frequency-option {
+      margin-right: 10px;
+
+      &.check-frequency {
+        width: 300px;
+        max-width: 100%;
+      }
+
+      &.flex-1 {
+        flex: 1;
+      }
+
+      &.flex-2 {
+        flex: 2;
+      }
+    }
+  }
+
+  .react-autoql-select {
+    margin: 0;
+    margin-right: 5px;
+  }
+
+  .frequency-date-select-container {
+    margin-top: 10px;
+  }
+
+  .react-autoql-data-alert-frequency-options-container {
+    display: flex;
+    align-items: flex-end;
+    flex-wrap: wrap;
+  }
+}
