--- a/src/components/Notifications/ScheduleBuilder/ScheduleBuilder.scss
+++ b/src/components/Notifications/ScheduleBuilder/ScheduleBuilder.scss
@@ -1,4 +1,9 @@
 .data-alert-schedule-builder-step {
+  .schedule-builder-day-of-year-selector {
+    display: inline-flex;
+    align-items: flex-end;
+  }
+
   .data-alert-condition-statement {
     font-style: italic;
   }
