--- a/src/components/Notifications/NotificationItem/NotificationItem.scss
+++ b/src/components/Notifications/NotificationItem/NotificationItem.scss
@@ -26,14 +26,6 @@
     opacity: 0.9;
   }
 
-  .viz-toolbar {
-    border: none;
-
-    .react-autoql-toolbar-btn {
-      height: 33px;
-    }
-  }
-
   .react-autoql-notification-query-title {
     font-weight: 600;
     padding-top: 20px;
@@ -49,6 +41,7 @@
     text-overflow: ellipsis;
     overflow: hidden;
     padding: 0 15px;
+    opacity: 0.8;
 
     .condition-builder-statement {
       font-style: italic;
@@ -183,7 +176,7 @@
 
   .react-autoql-notification-data-container {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     flex: 3 3 0px;
     overflow: hidden;
 
@@ -196,7 +189,7 @@
       display: flex;
       flex-direction: column;
       padding: 10px 15px 5px 15px;
-      opacity: 0.8;
+      overflow: hidden;
     }
 
     .react-autoql-table-container {
@@ -285,11 +278,32 @@
     transition-timing-function: ease;
   }
 
-  .react-autoql-notification-viz-switcher {
+  .react-autoql-notification-toolbar-container {
     flex: 0 0 auto;
+    border-left: 1px solid var(--react-autoql-border-color);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
 
     .react-autoql-toolbar.viz-toolbar {
-      padding: 0px 20px 5px 20px;
+      padding: 10px;
+      box-shadow: none;
+      border: none;
+
+      .react-autoql-toolbar-btn {
+        height: 33px;
+      }
+    }
+
+    .react-autoql-notification-toolbar-more-options {
+      padding: 15px 10px;
+      font-size: 18px;
+      cursor: pointer;
+
+      &:hover {
+        opacity: 0.7;
+      }
     }
   }
 
