--- a/src/components/VizToolbar/VizToolbar.scss
+++ b/src/components/VizToolbar/VizToolbar.scss
@@ -1,5 +1,6 @@
 .viz-toolbar {
   display: flex;
+  flex-direction: row;
   background: inherit;
   padding: 5px;
   border-radius: 6px;
@@ -8,8 +9,8 @@
   border: 1px solid var(--react-autoql-border-color);
   box-shadow: 0px 2px 3px -2px var(--react-autoql-box-shadow-color);
 
-  &.vertical .react-autoql-toolbar-btn {
-    display: block;
+  &.vertical {
+    flex-direction: column;
   }
 }
 
