feat: shorten typing delay for live table filters

--- a/src/components/SelectableList/SelectableList.scss
+++ b/src/components/SelectableList/SelectableList.scss
@@ -2,6 +2,7 @@
   padding: 0 20px;
   display: flex;
   justify-content: space-between;
+  align-items: center;
   line-height: 36px;
   user-select: none;
   cursor: default;
