--- a/src/components/Charts/Axis/Axis.scss
+++ b/src/components/Charts/Axis/Axis.scss
@@ -128,6 +128,7 @@ g.legendOrdinal tspan {
         .agg-type-symbol,
         .agg-select-text {
           color: var(--react-autoql-accent-color);
+          font-weight: 600;
         }
       }
     }
