--- a/src/components/Notifications/RuleSimple/RuleSimple.scss
+++ b/src/components/Notifications/RuleSimple/RuleSimple.scss
@@ -6,6 +6,10 @@
     flex-direction: column;
     flex: 1;
     width: 100%;
+
+    input {
+      line-height: 37px;
+    }
   }
 
   .react-autoql-rule-first-input-container {
@@ -23,6 +27,7 @@
     .react-autoql-rule-condition-select {
       flex: 0;
       flex-basis: 33px;
+      height: 39px;
     }
     .react-autoql-rule-input {
       flex: 1;
@@ -46,8 +51,7 @@
       margin: 0;
     }
     .react-autoql-input-container:hover + .react-autoql-rule-term-type-selector,
-    .react-autoql-input-container.focus
-      + .react-autoql-rule-term-type-selector {
+    .react-autoql-input-container.focus + .react-autoql-rule-term-type-selector {
       color: var(--react-autoql-accent-color, #26a7df);
       border-color: var(--react-autoql-accent-color, #26a7df);
     }
