feat: improve drilldown chart collapse button style

--- a/src/components/Dashboard/Dashboard.scss
+++ b/src/components/Dashboard/Dashboard.scss
@@ -17,11 +17,35 @@
       .react-autoql-dashboard-drilldown-original,
       .layout-splitter {
         transition: opacity 0.3s ease, height 0.3s ease;
-        visibility: hidden;
-        pointer-events: none;
-        opacity: 0;
-        height: 0;
+        // visibility: hidden;
+        // pointer-events: none;
+        // opacity: 0;
+        // height: 0;
       }
+    }
+
+    .splitter-collapse-btn {
+      display: flex;
+      justify-content: center;
+      line-height: 22px;
+      width: 20px;
+      height: 20px;
+      border-radius: 10px;
+      margin-left: 50%;
+      transform: translate(-11px, -11px);
+      border: 1px solid #ccc;
+      cursor: pointer;
+      background: var(--react-autoql-background-color-secondary);
+      transition: border-color 0.2s ease, color 0.2s ease;
+
+      &:hover {
+        border-color: var(--react-autoql-accent-color);
+        color: var(--react-autoql-accent-color);
+      }
+    }
+
+    &.chart-hidden .splitter-collapse-btn {
+      transform: translate(-11px, -11px) rotate(180deg);
     }
 
     &.chart-hidden .layout-pane:not(.layout-pane-primary) {
