--- a/src/components/Dashboard/Dashboard.scss
+++ b/src/components/Dashboard/Dashboard.scss
@@ -1,31 +1,51 @@
 .react-autoql-dashboard-container {
-  background: var(--react-autoql-background-color-primary);
-  height: 100%;
+  background: transparent;
   width: 100%;
   overflow: hidden;
   padding-top: 3px;
+  min-width: 500px;
 }
+
 .react-autoql-dashboard-container.edit-mode {
   padding-bottom: 200px;
 }
 
 .dashboard-drilldown-modal {
-  .ReactModal__Content {
-    top: unset !important;
-    margin-top: 20px !important;
-    max-height: 93vh !important;
-  }
-
   .dashboard-drilldown-modal-content {
+    &.chart-hidden,
     &.top-hidden {
       .react-autoql-dashboard-drilldown-original,
       .layout-splitter {
         transition: opacity 0.3s ease, height 0.3s ease;
-        visibility: hidden;
-        pointer-events: none;
-        opacity: 0;
-        height: 0;
+        // visibility: hidden;
+        // pointer-events: none;
+        // opacity: 0;
+        // height: 0;
       }
+    }
+
+    .splitter-collapse-btn {
+      display: flex;
+      justify-content: center;
+      line-height: 22px;
+      width: 20px;
+      height: 20px;
+      border-radius: 10px;
+      margin-left: 50%;
+      transform: translate(-11px, -11px);
+      border: 1px solid #ccc;
+      cursor: pointer;
+      background: var(--react-autoql-background-color-secondary);
+      transition: border-color 0.2s ease, color 0.2s ease;
+
+      &:hover {
+        border-color: var(--react-autoql-accent-color);
+        color: var(--react-autoql-accent-color);
+      }
+    }
+
+    &.chart-hidden .splitter-collapse-btn {
+      transform: translate(-11px, -11px) rotate(180deg);
     }
 
     &.chart-hidden .layout-pane:not(.layout-pane-primary) {
@@ -34,9 +54,6 @@
 
     &.top-hidden .layout-pane:not(.layout-pane-primary) {
       height: 100% !important;
-    }
-    &.top-hidden .layout-pane.layout-pane-primary {
-      flex: 0;
     }
 
     .react-autoql-modal-body {
