--- a/src/components/OptionsToolbar/OptionsToolbar.scss
+++ b/src/components/OptionsToolbar/OptionsToolbar.scss
@@ -42,7 +42,7 @@
     width: 100%;
     min-height: 80px;
     border-radius: 4px;
-    border: 1px solid rgba(0, 0, 0, 0.15);
+    border: 1px solid var(--react-autoql-border-color);
     margin-top: 15px;
     padding: 5px 10px;
     outline: none !important;
